--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.1",
   "description": "zan template",
   "dependencies": {
-    "zan-node": "latest",
-    "koa-router": "7.0.1",
-    "lodash": "4.17.4"
+    "lodash": "4.17.4",
+    "zan-node": "latest"
   },
   "devDependencies": {
     "babel-cli": "6.24.1",
